--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/demo
-
+spring.data.mongodb.uri=mongodb+srv://interlude2:gwxWbGyoWvwkycpm@cluster0.smza0.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+spring.data.mongodb.database=Question-app
 
 
 spring.mail.host=smtp.gmail.com
